@@ -1,36 +1,34 @@
 package us.dot.its.jpo.ode.api.controllers;
 
-import java.time.ZonedDateTime;
 import java.util.List;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.data.mongodb.core.query.Query;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-import com.fasterxml.jackson.databind.ObjectMapper;
 
-import us.dot.its.jpo.ode.api.ConflictMonitorApiProperties;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import us.dot.its.jpo.ode.api.accessors.reports.ReportRepository;
 import us.dot.its.jpo.ode.api.models.ReportDocument;
 import us.dot.its.jpo.ode.api.services.ReportService;
 
+@Slf4j
 @RestController
+@ConditionalOnProperty(name = "enable.api", havingValue = "true", matchIfMissing = false)
+@ApiResponses(value = {
+        @ApiResponse(responseCode = "401", description = "Unauthorized"),
+        @ApiResponse(responseCode = "500", description = "Internal Server Error")
+})
 public class ReportController {
-
-    private static final Logger logger = LoggerFactory.getLogger(ReportController.class);
-
-    ObjectMapper objectMapper = new ObjectMapper();
-
-    @Autowired
-    ConflictMonitorApiProperties props;
 
     @Autowired
     ReportService reportService;
@@ -38,19 +36,19 @@ public class ReportController {
     @Autowired
     ReportRepository reportRepo;
 
-    public String getCurrentTime() {
-        return ZonedDateTime.now().toInstant().toEpochMilli() + "";
-    }
-
-    @CrossOrigin(origins = "http://localhost:3000")
+    @Operation(summary = "Generate a Report", description = "Generates a new report for the intersection specified, within the start and end time. This can take upwards of 15 minutes to complete for longer reports")
     @RequestMapping(value = "/reports/generate", method = RequestMethod.GET, produces = "application/octet-stream")
-    @PreAuthorize("@PermissionService.isSuperUser() || (@PermissionService.hasIntersection(#intersectionID) and @PermissionService.hasRole('USER')) ")
+    @PreAuthorize("@PermissionService.isSuperUser() || (@PermissionService.hasIntersection(#intersectionID, 'USER') and @PermissionService.hasRole('USER')) ")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Success"),
+            @ApiResponse(responseCode = "403", description = "Forbidden - Requires SUPER_USER or USER role with access to the intersection requested"),
+    })
     public byte[] generateReport(
-            @RequestParam(name = "intersection_id", required = true) int intersectionID,
+            @RequestParam(name = "intersection_id") int intersectionID,
             @RequestParam(name = "road_regulator_id", required = false) Integer roadRegulatorID,
-            @RequestParam(name = "start_time_utc_millis", required = true) long startTime,
-            @RequestParam(name = "end_time_utc_millis", required = true) long endTime) {
-        logger.info("Generating Report");
+            @RequestParam(name = "start_time_utc_millis") long startTime,
+            @RequestParam(name = "end_time_utc_millis") long endTime) {
+        log.debug("Generating Report");
 
         if (roadRegulatorID == null) {
             roadRegulatorID = -1;
@@ -62,45 +60,46 @@ public class ReportController {
         return document.getReportContents();
     }
 
-    @CrossOrigin(origins = "http://localhost:3000")
+    @Operation(summary = "List Reports", description = "Returns a list of existing reports, as aggregated data, filtered by name, intersection ID, start time, and end time. The latest parameter will return the most recent report.")
     @RequestMapping(value = "/reports/list", method = RequestMethod.GET, produces = "application/json")
     @PreAuthorize("@PermissionService.isSuperUser() || @PermissionService.hasRole('USER')")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Success"),
+            @ApiResponse(responseCode = "403", description = "Forbidden - Requires SUPER_USER or USER role"),
+    })
     public ResponseEntity<List<ReportDocument>> listReports(
             @RequestParam(name = "report_name", required = false) String reportName,
-            @RequestParam(name = "intersection_id", required = false) int intersectionID,
-            @RequestParam(name = "road_regulator_id", required = false) Integer roadRegulatorID,
-            @RequestParam(name = "start_time_utc_millis", required = true) long startTime,
-            @RequestParam(name = "end_time_utc_millis", required = true) long endTime,
-            @RequestParam(name = "latest", required = true) boolean latest) {
+            @RequestParam(name = "intersection_id") int intersectionID,
+            @RequestParam(name = "start_time_utc_millis") long startTime,
+            @RequestParam(name = "end_time_utc_millis") long endTime,
+            @RequestParam(name = "latest") boolean latest) {
 
-        if (roadRegulatorID == null) {
-            roadRegulatorID = -1;
-        }
-
-        Query query = reportRepo.getQuery(reportName, intersectionID, roadRegulatorID, startTime, endTime,
+        Query query = reportRepo.getQuery(reportName, intersectionID, startTime, endTime,
                 false,
                 latest);
-        long count = reportRepo.getQueryResultCount(query);
-
-        logger.info("Returning Report List with Size: " + count);
         return ResponseEntity.ok(reportRepo.find(query));
     }
 
-    @CrossOrigin(origins = "http://localhost:3000")
+    @Operation(summary = "Download a Report", description = "Returns the a report by name, as aggregated data")
     @RequestMapping(value = "/reports/download", method = RequestMethod.GET, produces = "application/octet-stream")
     @PreAuthorize("@PermissionService.hasRole('USER')")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Success"),
+            @ApiResponse(responseCode = "403", description = "Forbidden - Requires USER role"),
+            @ApiResponse(responseCode = "404", description = "Report not found"),
+    })
     public ResponseEntity<byte[]> downloadReport(
-            @RequestParam(name = "report_name", required = true) String reportName) {
+            @RequestParam(name = "report_name") String reportName) {
 
-        Query query = reportRepo.getQuery(reportName, null, null, null, null, true, true);
+        Query query = reportRepo.getQuery(reportName, null, null, null, true, true);
 
-        logger.info("Returning archived report for download");
+        log.debug("Returning archived report for download");
 
         List<ReportDocument> reports = reportRepo.find(query);
-        if (reports.size() > 0) {
+        if (!reports.isEmpty()) {
             return ResponseEntity.ok()
                     .header("Content-Disposition", "attachment; filename=\"" + reportName + "\"")
-                    .body(reports.get(0).getReportContents());
+                    .body(reports.getFirst().getReportContents());
         } else {
             return ResponseEntity.status(HttpStatus.NOT_FOUND).body(null);
         }
